# QC-Bing-Automation-Tool

./: README.md  pyproject.toml  qc_mvp.py.txt
data/: sample_account.json
docs/: PRD.md
qc_tool/: __init__.py  __main__.py  evaluator.py  loader.py  models.py  runner.py
rules/: default_rules.yaml
tests/: test_runner.py
